--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -64,6 +64,9 @@
         <a class="navbar-item <% if (title == 'Animated Texture Creator') { %> is-active <% } %>" href="/AnimTexture">
           Animated Textures
         </a>
+        <a class="navbar-item <% if (title == 'Misc Tools') { %> is-active <% } %>" href="/MiscTools">
+          Misc Tools
+        </a>
         <a class="navbar-item">
           More Coming Soon
         </a>
