--- a/site/templates/index.ejs
+++ b/site/templates/index.ejs
@@ -17,7 +17,7 @@
     </div>
   </section>
 
-  <script type="text/javascript" src="js/typer.js"></script>
+  <script type="text/javascript" src="../assets/js/typer.js"></script>
   <script>
     $("#typing").typer({
       strings: [
