--- a/site/assets/css/style.css
+++ b/site/assets/css/style.css
@@ -1,18 +1,18 @@
 @font-face {
   font-family: MinecraftRegular;
-  src: url(/fonts/MinecraftRegular.otf);
+  src: url(../fonts/MinecraftRegular.otf);
 }
 @font-face {
   font-family: MinecraftBold;
-  src: url(/fonts/MinecraftBold.otf);
+  src: url(../fonts/MinecraftBold.otf);
 }
 @font-face {
   font-family: MinecraftItalic;
-  src: url(/fonts/MinecraftItalic.otf);
+  src: url(../fonts/MinecraftItalic.otf);
 }
 @font-face {
   font-family: MinecraftBoldItalic;
-  src: url(/fonts/MinecraftBoldItalic.otf);
+  src: url(../fonts/MinecraftBoldItalic.otf);
 }
 body {
   font-family: MinecraftRegular;
