--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { queryPreset, path, title: "Hex Gradient Creator" ,
+<%- include("partials/header", { queryPreset, user, alert, alert_type, path, title: "Hex Gradient Creator" ,
   description: "Hex color gradient creator" }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
@@ -21,6 +21,12 @@
           Hex color gradient creator
         </p>
         <br>
+        <% if (alert) { %>
+          <div class="notification is-<%- alert_type %> " id="notification">
+            <button class="delete" onclick="deleteElement('notification')"></button>
+            <%= alert %>
+          </div>
+        <% } %>
         <div class="tile is-ancestor">
           <div class="tile is-parent">
             <div class="tile is-child">
@@ -53,8 +59,8 @@
           <div class="tile is-parent is-8">
             <div class="tile is-child">
               <div class="content">
-                <label for='nickname'>Input Text</label>
-                <input id="nickname" class="input" type="text" placeholder="Your Text" value="SimplyMC"
+                <label for='text'>Input Text</label>
+                <input id="text" class="input" type="text" placeholder="Your Text" value="SimplyMC"
                   oninput="updateOutputText(event);">
                 <label for='output-format'>Output Format</label><br>
                 <div class="select" style="width:100%">
@@ -104,6 +110,47 @@
                 <button class="button" type="button" id="importPreset" onclick="showfield('importInput')">
                   Import Preset
                 </button>
+                <% if(user){ %> 
+                  <button class="button" type="button" id="importPreset" onclick="openModal(document.getElementById('preset'))">
+                    Submit Preset
+                  </button>
+                  <form method="post">
+                    <div class="modal" id="preset">
+                      <div class="modal-background"></div>
+                      <div class="modal-card">  
+                        <header class="modal-card-head">
+                          <p class="modal-card-title">Submit a preset</p>
+                        </header>
+                        <section class="modal-card-body">
+                          <div class="field">
+                            <label class="label">Name</label>
+                            <div class="control">
+                                <input class="input" type="text" name="name">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <label class="label">Description</label>
+                            <div class="control">
+                                <input class="input" type="text" name="description">
+                            </div>
+                        </div>
+                        <div class="field">
+                          <label class="label">Preset</label>
+                          <div class="control">
+                            <textarea class="input is-static" type="text" name="preset" id="presetInput" value="exportPreset()"></textarea>
+                            <button type="button" class="button" onclick="writeToElement('presetInput', exportPreset())">Generate</button>
+                          </div>
+                      </div>
+                        </section>
+                        <footer class="modal-card-foot">
+                          <button class="button is-success" type="submit">Submit</button>
+                          <button type="button" class="button is-danger" onclick="closeModal(document.getElementById('preset'))">Cancel</button>
+                        </footer>
+                      </div>
+                    </div>
+                  </form>
+                  </div>
+                <% } %>
                 <div id="importInput" style="display: none;">
                   <label for='import'>Paste Here</label>
                   <input id="import" name="ImportInput" class="input" type="text"
@@ -111,22 +158,22 @@
                 </div>
                 <br><br>
                 <div id="formatSelector">
-                  <label class="checkbox">
-                    <input type="checkbox" id="bold" onclick="updateOutputText();">
-                    Bold
-                  </label>
-                  <label class="checkbox">
-                    <input type="checkbox" id="italics" onclick="updateOutputText();">
-                    Italic
-                  </label>
-                  <label class="checkbox">
-                    <input type="checkbox" id="underline" onclick="updateOutputText();">
-                    Underline
-                  </label>
-                  <label class="checkbox">
-                    <input type="checkbox" id="strike" onclick="updateOutputText();">
-                    Strikethrough
-                  </label>
+                  <div class="field">
+                    <input type="checkbox" class="switch" id="bold" onclick="updateOutputText();">
+                    <label for="bold" class="noselect">Bold</label>
+                  </div>
+                  <div class="field">
+                    <input type="checkbox" class="switch" id="italics" onclick="updateOutputText();">
+                    <label for="italics" class="noselect">Italic</label>
+                  </div>
+                  <div class="field">
+                    <input type="checkbox" class="switch" id="underline" onclick="updateOutputText();">
+                    <label for="underline" class="noselect">Underline</label>
+                  </div>
+                  <div class="field">
+                    <input type="checkbox" class="switch" id="strike" onclick="updateOutputText();">
+                    <label for="strike" class="noselect">Strikethrough</label>
+                  </div>
                 </div>
               </div>
             </div>
