save author id as well as name

--- a/site/templates/admin.ejs
+++ b/site/templates/admin.ejs
@@ -53,6 +53,7 @@
                                         </div>
                                         <div class="field" hidden>
                                             <textarea class="textarea" name="id" readonly="readonly" ><%= preset.id %></textarea>
+                                            <textarea class="textarea" name="authorid" readonly="readonly" ><%= preset.authorid %></textarea>
                                         </div>
                                         <button type="submit" id="Submit" class="button is-success">Submit</button>
                                     </form>
