--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -137,7 +137,7 @@
                         <div class="field">
                           <label class="label">Preset</label>
                           <div class="control">
-                            <textarea class="input is-static" type="text" name="preset" id="presetInput" value="exportPreset()"></textarea>
+                            <textarea class="input is-static" type="text" name="preset" id="presetInput" readonly></textarea>
                             <button type="button" class="button" onclick="writeToElement('presetInput', exportPreset())">Generate</button>
                           </div>
                       </div>
