hehe funny ads ;)

--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -16,6 +16,7 @@
   <link rel="preload" href="/fonts/MinecraftBold.otf" as="font" type="font/otf" crossorigin>
   <link rel="preload" href="/fonts/MinecraftItalic.otf" as="font" type="font/otf" crossorigin>
   <link rel="preload" href="/fonts/MinecraftBoldItalic.otf" as="font" type="font/otf" crossorigin>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1579411871326173" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/js/js.cookie.js"></script>
 </head>
