--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -47,7 +47,7 @@
             <a class="navbar-item <% if (title == 'Animated TAB Creator') { %> is-active <% } %>" href="/AnimTab">
               Animated TAB
             </a>
-            <a class="navbar-item <% if (title == 'User Submitted Presets') { %> is-active <% } %>" href="/presets">
+            <a class="navbar-item <% if (title == 'User Submitted Presets') { %> is-active <% } %>" href="/Presets">
               Presets
             </a>
           </div>
@@ -71,8 +71,8 @@
         <a class="navbar-item <% if (title == 'Misc Tools') { %> is-active <% } %>" href="/MiscTools">
           Misc Tools
         </a>
-        <a class="navbar-item">
-          More Coming Soon
+        <a class="navbar-item <% if (title == 'Privacy policy') { %> is-active <% } %>" href="/Privacy">
+          Privacy Policy
         </a>
       </div>
     
