--- a/site/templates/presets.ejs
+++ b/site/templates/presets.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, presets, utils, title: "A Minecraft Multitool", description: "A Minecraft multitool for you" }) %>
+<%- include("partials/header", { path, presets, utils, title: "User Submitted Presets", description: "Custom gradient prests made by users" }) %>
 
   <section class="hero is-dark is-fullheight-with-navbar">
     <div class="hero-body">
