--- a/site/templates/admin.ejs
+++ b/site/templates/admin.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, presets, title: "Admin Panel" , description: "You shouldnt see this" }) %>
+<%- include("partials/header", { path, presets, title: "Admin Panel" , description: "You shouldnt see this", ads: false }) %>
 
     <section class="hero is-dark is-fullheight-with-navbar">
         <div class="hero-body">
