--- a/site/templates/animtab.ejs
+++ b/site/templates/animtab.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { queryPreset, path, alert, title: "Animated TAB Creator", description: "TAB plugin gradient animation creator" }) %>
+<%- include("partials/header", { queryPreset, path, alert, title: "Animated TAB Creator", description: "TAB plugin gradient animation creator", ads: true }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
   <div id="hexColorTemplate" style="display:none;">
