--- a/site/templates/gradients.ejs
+++ b/site/templates/gradients.ejs
@@ -1,5 +1,4 @@
-<%- include("partials/header", { queryPreset, user, alert, alert_type, path, title: "Hex Gradient Creator" ,
-  description: "Hex color gradient creator" }) %>
+<%- include("partials/header", { queryPreset, user, alert, alert_type, path, title: "Hex Gradient Creator" , description: "Hex color gradient creator", ads: true }) %>
   <link rel="stylesheet" href="/css/RGBStyle.css">
 
   <div id="hexColorTemplate" style="display:none;">
