--- a/site/templates/index.ejs
+++ b/site/templates/index.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "A Minecraft Multitool", description: "A Minecraft multitool for you" }) %>
+<%- include("partials/header", { path, title: "A Minecraft Multitool", description: "A Minecraft multitool for you", ads: false }) %>
 
   <section class="hero is-dark is-fullheight-with-navbar">
     <div class="hero-body">
