--- a/site/templates/misctools.ejs
+++ b/site/templates/misctools.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Misc Tools" , description: "Random minecraft server tools" }) %>
+<%- include("partials/header", { path, title: "Misc Tools" , description: "Random minecraft server tools", ads: false }) %>
   <link rel="stylesheet" href="/css/MiscTools.css">
 
   <section class="hero is-dark is-fullheight-with-navbar">
