--- a/site/templates/partials/header.ejs
+++ b/site/templates/partials/header.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1579411871326173" crossorigin="anonymous"></script>
+  <% if(ads) {%> 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1579411871326173" crossorigin="anonymous"></script>
+  <% } %>
   <title>SimplyMC: <%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="SimplyMC: <%= title %>" property="og:title" />
