--- a/site/templates/privacy.ejs
+++ b/site/templates/privacy.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header", { path, title: "Privacy policy", description:
-"The privacy policy for simplymc" }) %>
+"The privacy policy for simplymc", ads: false }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
