--- a/site/templates/timings-result.ejs
+++ b/site/templates/timings-result.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Timings Analysis Result", description: `${fields.length} Recommendations, click on the link to see them.` }) %>
+<%- include("partials/header", { path, title: "Timings Analysis Result", description: `${fields.length} Recommendations, click on the link to see them.`, ads: true }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
