--- a/site/templates/profile-result.ejs
+++ b/site/templates/profile-result.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header", { path, title: "Profile Analysis Result", description: `${fields.length} Recommendations, click on the link to see them.`, ads: true }) %>
+<%- include("partials/header", { path, title: "Profile Analysis Result", description: `${fields.length} Recommendations, click on the link to see them.`, ads: false }) %>
 
 <section class="hero is-dark is-fullheight-with-navbar">
   <div class="hero-body">
